Download buttons got black text

--- a/fai-cd/index.html
+++ b/fai-cd/index.html
@@ -29,7 +29,7 @@
 
           <div class="col s12 valign-wrapper">
             <div class="col m5 s12 valign">
-              <a href="faicd64-large_5.9.4.iso" class="waves-effect waves-light btn orange">
+              <a href="faicd64-large_5.9.4.iso" class="waves-effect waves-light btn orange black-text">
                 <i class="material-icons left">download</i>FAI ISO large (1.1GB)</a>
             </div>
             <p class="col m7 s12">
@@ -39,7 +39,7 @@
 
           <div class="col s12 valign-wrapper">
             <div class="col m5 s12 valign">
-              <a href="faicd64-small_5.9.4.iso" class="waves-effect waves-light btn orange">
+              <a href="faicd64-small_5.9.4.iso" class="waves-effect waves-light btn orange black-text">
                 <i class="material-icons left">download</i>FAI ISO small (670MB)</a>
             </div>
             <p class="col m7 s12">
@@ -49,7 +49,7 @@
 
           <div class="col s12 valign-wrapper">
             <div class="col m5 s12 valign">
-              <a href="faicd64-ubuntu-only_5.9.4.iso" class="waves-effect waves-light btn orange">
+              <a href="faicd64-ubuntu-only_5.9.4.iso" class="waves-effect waves-light btn orange black-text">
                 <i class="material-icons left">download</i>FAI ISO Ubuntu (1.2GB)</a>
             </div>
             <p class="col m7 s12">
@@ -59,7 +59,7 @@
 
           <div class="col s12 valign-wrapper">
             <div class="col m5 s12 valign">
-              <a href="faicd64-autodiscover_5.9.4.iso" class="waves-effect waves-light btn orange">
+              <a href="faicd64-autodiscover_5.9.4.iso" class="waves-effect waves-light btn orange black-text">
                 <i class="material-icons left">download</i>Autodiscover CD (31MB)</a>
             </div>
             <p class="col m7 s12">
@@ -88,7 +88,7 @@
           <div class="col s12">
             <h5>FAI on a USB stick</h5>
             You can write the ISO image onto a USB stick using the command dd(1):
-            <pre class="grey-text text-darken-2">&nbsp;&nbsp;dd if=faicd64-large_5.9.iso of=/dev/sdx</pre>
+            <pre>&nbsp;&nbsp;<code class="grey lighten-2">dd if=faicd64-large_5.9.iso of=/dev/sdx</code></pre>
             and replace /dev/sdX with the name of your USB device (e.g. /dev/sdf).
           </div>
         </div>
