--- a/guide/index.html
+++ b/guide/index.html
@@ -16,6 +16,11 @@
     <link rel="icon" href="/pics/favicon.ico" type="image/x-icon">
     <meta charset="UTF-8"/>
     <title>FAI - Fully Automatic Installation</title>
+    <style>
+			.input-field {
+				margin-top: 0;
+			}
+		</style>
   </head>
 
   <body>
