--- a/fai-cd/index.html
+++ b/fai-cd/index.html
@@ -1,4 +1,4 @@
-`<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <html lang="en">
@@ -33,7 +33,7 @@
 <br>
 <br>
 <span class="downloadbox-border" >
-<a href="faicd64-large_5.9.4.iso" style="text-decoration: none">
+<a href="faicd64-large_5.10.1.iso" style="text-decoration: none">
 <span class="downloadbox-real" >FAI ISO large  &nbsp; (1.1 GB) </span>
 </a>
 </span>
@@ -48,8 +48,8 @@ for CentOS 7 and Ubuntu 18.04
 
 
 <span class="downloadbox-border" >
-<a href="faicd64-small_5.9.4.iso" style="text-decoration: none">
-<span class="downloadbox-real" >FAI ISO small &nbsp; (670 MB)</span>
+<a href="faicd64-small_5.10.1.iso" style="text-decoration: none">
+<span class="downloadbox-real" >FAI ISO small &nbsp; (620 MB)</span>
 </a>
 </span>
 &nbsp;
@@ -62,8 +62,8 @@ basefiles are downloaded from the internet.
 <p>
 
 <span class="downloadbox-border" >
-<a href="faicd64-ubuntu-only_5.9.4.iso" style="text-decoration: none">
-<span class="downloadbox-real" >FAI ISO Ubuntu &nbsp; (1.2 GB)</span>
+<a href="faicd64-ubuntu-only_5.10.1.iso" style="text-decoration: none">
+<span class="downloadbox-real" >FAI ISO Ubuntu &nbsp; (1.3 GB)</span>
 </a>
 </span>
 &nbsp;
@@ -76,8 +76,8 @@ This image only installs Ubuntu 20.04 LTS. All packages are included.
 
 
 <span class="downloadbox-border" >
-<a href="faicd64-autodiscover_5.9.4.iso" style="text-decoration: none">
-<span class="downloadbox-real" >Autodiscover CD &nbsp; (31 MB) </span>
+<a href="faicd64-autodiscover_5.10.1.iso" style="text-decoration: none">
+<span class="downloadbox-real" >Autodiscover CD &nbsp; (35 MB) </span>
 </a>
 </span>
 &nbsp;
@@ -87,7 +87,7 @@ Boot only image which autodiscovers the FAI server.
 </p>
 <br>
 
-All installation images use Debian 10 aka buster, FAI 5.9.4, kernel 4.19, amd64 architecture,
+All installation images use Debian 10 aka buster, FAI 5.10.1, kernel 4.19, amd64 architecture,
 <a href=sha256sums.asc>sha256sum.asc</a> of the ISO's. The can boot
 from CD/DVD or USB stick with legacy BIOS or UEFI.
 <br>
