add french wiki

--- a/otherdocs/index.html
+++ b/otherdocs/index.html
@@ -348,6 +348,8 @@ DE NODOS EN UN CLUSTER</a>
 <li> <b>French, fran&ccedil;ais</b>
 <ul>
 
+<li><a href="https://wiki.evolix.org/HowtoFAI">https://wiki.evolix.org/HowtoFAI</a></li>
+
 <li>French translation of the FAI guide <a href="/fai-guide-fr">html version</a> <a href="/fai-guide-fr.text">plain ASCII</a> and <a href="/fai-guide-fr.pdf">pdf</a> for FAI 5.3 (2017).
 
 <li> <a href="http://idum.fr/spip.php?article174">Installation d'un serveur FAI</a> 2010 (<a href="http://idum.fr/IMG/pdf/Installation_d_un_serveur_FAI.pdf">PDF</a>)
