--- a/fai-cd/index.html
+++ b/fai-cd/index.html
@@ -142,15 +142,23 @@ the installation media.
 </p>
 
 
-<h2> Misc downloads</h2>
+<h2> Debian Live ISO created by FAI</h2>
 
-<ul>
-<li> <a href="debian9-live-xfce.iso">Live CD</a> using Debian 9 (stretch)
-, <a href="https://wiki.fai-project.org/index.php/Use_nfsroot_for_diskless_clients">documentation</a>
+   <p>
+&nbsp;
+    <p>
+      <span class="downloadbox-border" >
+<a href="debian11-live-xfce.iso" style="text-decoration: none">
+<span class="downloadbox-real" >Live CD  &nbsp; (550 MB) </span>
+</a>
+</span>
+&nbsp;
+&nbsp;
+using Debian 11 (bullseye), <a href="https://wiki.fai-project.org/index.php/Use_nfsroot_for_diskless_clients">documentation</a>
 
 <hr>
 <ADDRESS>
-Tue Apr 28 14:25:20 CEST 2020
+  Tue, 06 Apr 2021 21:11:41 +0200
 </ADDRESS>
 
 
