new FAI release, new images

--- a/fai-cd/index.html
+++ b/fai-cd/index.html
@@ -33,7 +33,7 @@
 <br>
 <br>
 <span class="downloadbox-border" >
-<a href="faicd64-large_5.10.1.iso" style="text-decoration: none">
+<a href="faicd64-large_5.10.1+3.iso" style="text-decoration: none">
 <span class="downloadbox-real" >FAI ISO large  &nbsp; (1.1 GB) </span>
 </a>
 </span>
@@ -48,7 +48,7 @@ for CentOS 7 and Ubuntu 18.04
 
 
 <span class="downloadbox-border" >
-<a href="faicd64-small_5.10.1.iso" style="text-decoration: none">
+<a href="faicd64-small_5.10.1+3.iso" style="text-decoration: none">
 <span class="downloadbox-real" >FAI ISO small &nbsp; (620 MB)</span>
 </a>
 </span>
@@ -62,7 +62,7 @@ basefiles are downloaded from the internet.
 <p>
 
 <span class="downloadbox-border" >
-<a href="faicd64-ubuntu-only_5.10.1.iso" style="text-decoration: none">
+<a href="faicd64-ubuntu-only_5.10.1+3.iso" style="text-decoration: none">
 <span class="downloadbox-real" >FAI ISO Ubuntu &nbsp; (1.3 GB)</span>
 </a>
 </span>
@@ -76,7 +76,7 @@ This image only installs Ubuntu 20.04 LTS. All packages are included.
 
 
 <span class="downloadbox-border" >
-<a href="faicd64-autodiscover_5.10.1.iso" style="text-decoration: none">
+<a href="faicd64-autodiscover_5.10.1+3.iso" style="text-decoration: none">
 <span class="downloadbox-real" >Autodiscover CD &nbsp; (35 MB) </span>
 </a>
 </span>
@@ -87,7 +87,7 @@ Boot only image which autodiscovers the FAI server.
 </p>
 <br>
 
-All installation images use Debian 10 aka buster, FAI 5.10.1, kernel 4.19, amd64 architecture,
+All installation images use Debian 10 aka buster, FAI 5.10.1+3, kernel 4.19, amd64 architecture,
 <a href=sha256sums.asc>sha256sum.asc</a> of the ISO's. The can boot
 from CD/DVD or USB stick with legacy BIOS or UEFI.
 <br>
@@ -158,7 +158,7 @@ using Debian 11 (bullseye), <a href="https://wiki.fai-project.org/index.php/Use_
 
 <hr>
 <ADDRESS>
-  Tue, 06 Apr 2021 21:11:41 +0200
+  Sat, 17 Apr 2021 22:45:33 +0200
 </ADDRESS>
 
 
