--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ machines or on a cloud-computing platform. using the <a href=FAIme>FAI.me build 
 <p style="float:right; position:relative; top:-30px;">
 <!-- <p style="text-align: center;"> -->
 <span class="downloadbox-border" >
-<a href="/fai-cd/faicd64-large_5.10.1.iso" style="text-decoration: none">
+<a href="/fai-cd/faicd64-large_5.10.1+3.iso" style="text-decoration: none">
 <span class="downloadbox-real" >FAI ISO (1.1 GB)</span>
 </a>
 </span>
@@ -59,7 +59,7 @@ Motto: Plan your installation, and FAI installs your plan.</p>
 <h2 style="display:inline-block;width:50%">NEWS</h2>
 
 <ul>
-<li>[Mar 13, 2021] FAI 5.10.1 released, new images are available</a></li>
+<li>[Apr 17, 2021] FAI 5.10.1+3 released, new images are available</a></li>
 <li>[Jan 21, 2021] FAIme now adds non-free firmware needed for wireless cards</a></li>
 <li>[Oct 11-16 2019] Thomas was in Boston, MA joining the Debian Cloud sprint</a></li>
 <li> <b>
