/references ready to go

--- a/references/index.html
+++ b/references/index.html
@@ -1,160 +1,158 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
 <html lang="en">
 
   <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-      <title>FAI - Fully Automatic Installation</title>
-      <link rel="stylesheet" type="text/css" href="/css/main.css" media="screen" />
-	<link rel="stylesheet" type="text/css" href="/css/print.css" media="print" />
+    <!--Import Google Icon Font-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!--Import materialize.css-->
+    <link type="text/css" rel="stylesheet" href="/css/materialize.css" media="screen"/>
 
-<style type="text/css">
-hr {margin: 1em 0;background:#777777;height:2px;color:#777777;border:none;clear:both}
-#type-b #content {
-    margin: 0 13px 0 235px;
-}
-.imgframe {
-  padding:3px;
-  border:1px solid #cccccc;
-}
+    <!--Import sidenav.css-->
+    <link type="text/css" rel="stylesheet" href="/css/sidenav.css" media="screen"/>
 
-</style>
+    <!--Let browser know website is optimized for mobile-->
+    <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
+
+    <link rel="icon" href="/pics/favicon.ico" type="image/x-icon">
+    <meta charset="UTF-8"/>
+    <title>FAI - Fully Automatic Installation</title>
+    <style>
+      .imgframe {
+        padding: 3px;
+        border: 1px solid #cccccc;
+      }
+    </style>
+
   </head>
+  <body>
+    <header>
+      <!--#include virtual="/header.html" -->
+    </header>
+    <main>
+      <div class="container">
+        <h4>Companies and organisations using FAI</h4>
 
-  <body id="type-b">
-    <div id="wrap">
-      <div id="header">
-	<div id="site-name">
-	  <a href="/">FAI - Fully Automatic Installation</a>
-	</div>
-<!-- removed header-menu-unused.htm -->
+        <a href="https://www.kaneo-gmbh.de">
+          <img class="imgframe" alt="FAI user" src="pics/kaneo.png"></a>
+        <a href="https://www.tuxedocomputers.com">
+          <img class="imgframe" alt="FAI user" src="pics/tuxedo.png"></a>
+        <a href="https://www.xing.com">
+          <img class="imgframe" alt="FAI user" src="pics/xing.png"></a>
+        <a href="https://www.brandwatch.com">
+          <img class="imgframe" alt="FAI user" src="pics/brandwatch.png"></a>
+        <a href="http://www.cae.wisc.edu">
+          <img class="imgframe" alt="FAI user" src="pics/cae.png"></a>
+        <a href="https://dropbox.com">
+          <img class="imgframe" alt="FAI user" src="pics/dropbox.png"></a>
+        <a href="https://www.csail.mit.edu">
+          <img class="imgframe" alt="FAI user" src="pics/csail.png"></a>
+        <a href="http://www.desy.de">
+          <img class="imgframe" alt="FAI user" src="pics/desy.png"></a>
+        <a href="http://www.edf.fr">
+          <img class="imgframe" alt="FAI user" src="pics/edf.png"></a>
+        <a href="https://taz.de">
+          <img class="imgframe" alt="FAI user" src="pics/taz.png"></a>
+        <a href="https://wwwcip.informatik.uni-erlangen.de">
+          <img class="imgframe" alt="FAI user" src="pics/fau.png"></a>
+        <a href="https://hpi.de">
+          <img class="imgframe" alt="FAI user" src="pics/hpi.png"></a>
+        <a href="https://archive.org">
+          <img class="imgframe" alt="FAI user" src="pics/archive.png"></a>
+        <img class="imgframe" alt="FAI user" src="pics/ip-exchange.png">
+        <img class="imgframe" alt="FAI user" src="pics/limux.png">
+        <a href="https://www.cewe.de">
+          <img class="imgframe" alt="FAI user" src="pics/cewe.png"></a>
+        <a href="http://narrowxpres.nl">
+          <img class="imgframe" alt="FAI user" src="pics/narrowxpress.png"></a>
+        <a href="https://www.stayfriends.de">
+          <img class="imgframe" alt="FAI user" src="pics/stayfriends.png"></a>
+        <a href="https://www.spotify.com">
+          <img class="imgframe" alt="FAI user" src="pics/spotify.png"></a>
+        <a href="https://www.switch.ch">
+          <img class="imgframe" alt="FAI user" src="pics/switch.png"></a>
+        <a href="https://www.rbg.informatik.tu-darmstadt.de/">
+          <img class="imgframe" alt="FAI user" src="pics/tu-darmstadt.png"></a>
+        <a href="http://www.sanger.ac.uk">
+          <img class="imgframe" alt="FAI user" src="pics/sanger.png"></a>
+        <a href="https://www.mobile.de">
+          <img class="imgframe" alt="FAI user" src="pics/mobile.png"></a>
+        <a href="https://archive.org">
+          <img class="imgframe" alt="FAI user" src="pics/wayback.png"></a>
+        <a href="http://www.systems.ethz.ch">
+          <img class="imgframe" alt="FAI user" src="pics/eth.png"></a>
+        <a href="https://www.munichx.de">
+          <img class="imgframe" alt="FAI user" src="pics/munichx.png"></a>
+        <a href="https://catalyst.net.nz/">
+          <img class="imgframe" alt="FAI user" src="pics/catalyst.png"></a>
+        <a href="https://www.mathworks.com">
+          <img class="imgframe" alt="FAI user" src="pics/mathworks.png"></a>
+        <a href="https://netways.de">
+          <img class="imgframe" alt="FAI user" src="pics/netways.png"></a>
+        <a href="https://www.uni-marburg.de/hrz">
+          <img class="imgframe" alt="FAI user" src="pics/marburg.png"></a>
+        <a href="http://openqrm-enterprise.com">
+          <img class="imgframe" alt="FAI user" src="pics/openqrm.png"></a>
+        <a href="https://www.opera.com">
+          <img class="imgframe" alt="FAI user" src="pics/opera.png"></a>
+        <a href="https://www.hosteurope.de">
+          <img class="imgframe" alt="FAI user" src="pics/hosteurope.png"></a>
+        <a href="https://www.ida.liu.se">
+          <img class="imgframe" alt="FAI user" src="pics/linkopings.png"></a>
+        <a href="https://www.lvm.de">
+          <img class="imgframe" alt="FAI user" src="pics/lvm.png"></a>
+        <a href="http://informatik.uni-koeln.de/">
+          <img class="imgframe" alt="FAI user" src="pics/koeln.png"></a>
+        <a href="https://www.opensides.be">
+          <img class="imgframe" alt="FAI user" src="pics/opensides.png"></a>
+        <a href="https://www.gl-systemhaus.de">
+          <img class="imgframe" alt="FAI user" src="pics/gundl.png"></a>
+        <a href="https://www.ska.ac.za">
+          <img class="imgframe" alt="FAI user" src="pics/ska.png"></a>
+        <a href="https://iils.de">
+          <img class="imgframe" alt="FAI user" src="pics/iils.png"></a>
+        <a href="https://fsf.org">
+          <img class="imgframe" alt="FAI user" src="pics/fsf.png"></a>
+        <a href="https://www.chip.de">
+          <img class="imgframe" alt="FAI user" src="pics/chip.png"></a>
+        <a href="https://www.ibr.cs.tu-bs.de">
+          <img class="imgframe" alt="FAI user" src="pics/braunschweig.png"></a>
+        <a href="https://www.ismll.uni-hildesheim.de">
+          <img class="imgframe" alt="FAI user" src="pics/hildesheim.png"></a>
+        <a href="http://nedap-healthcare.com">
+          <img class="imgframe" alt="FAI user" src="pics/nedap.png"></a>
+        <a href="http://www.wolke.hs-furtwangen.de">
+          <img class="imgframe" alt="FAI user" src="pics/hfu.png"></a>
+        <a href="https://www.linuxhotel.de">
+          <img class="imgframe" alt="FAI user" src="pics/linuxhotel.png"></a>
+        <a href="https://alarm-dispatcher.de">
+          <img class="imgframe" alt="FAI user" src="pics/alarm.png"></a>
+        <a href="https://www.dvz-mv.de">
+          <img class="imgframe" alt="FAI user" src="pics/dvz.png"></a>
+        <a href="https://www.ise.fraunhofer.de">
+          <img class="imgframe" alt="FAI user" src="pics/ise.png"></a>
+        <a href="https://lihas.de">
+          <img class="imgframe" alt="FAI user" src="pics/lihas.png"></a>
+        <a href="http://www.info.univ-angers.fr/leria/">
+          <img class="imgframe" alt="FAI user" src="pics/angers.png"></a>
+        <a href="https://das-netzwerkteam.de/">
+          <img class="imgframe" alt="FAI user" src="pics/netzwerkteam.png"></a>
+        <a href="https://sagemcom.com/">
+          <img class="imgframe" alt="FAI user" src="pics/sagemcom.png"></a>
+
+        <p>
+          There are
+          <a href="/reports">more user references</a>
+          with links to companies and organisations.
+        </p>
       </div>
-
-<!--#include virtual="/menu.html" -->
-      <div id="content">
-<!-- removed breadcrumb -->
-
-<h1>Companies and organisations using FAI</h1>
-<p>
-
-<span style="line-height:2;" >
-
-<a href="https://www.kaneo-gmbh.de">
-<img class="imgframe" alt="FAI user" src="pics/kaneo.png" ></a>
-<a href="https://www.tuxedocomputers.com">
-<img class="imgframe" alt="FAI user" src="pics/tuxedo.png" ></a>
-<a href="https://www.xing.com">
-<img class="imgframe" alt="FAI user" src="pics/xing.png" ></a>
-<a href="https://www.brandwatch.com">
-<img class="imgframe" alt="FAI user" src="pics/brandwatch.png" ></a>
-<a href="http://www.cae.wisc.edu">
-<img class="imgframe" alt="FAI user" src="pics/cae.png" ></a>
-<a href="https://dropbox.com">
-<img class="imgframe" alt="FAI user" src="pics/dropbox.png" ></a>
-<a href="https://www.csail.mit.edu">
-<img class="imgframe" alt="FAI user" src="pics/csail.png" ></a>
-<a href="http://www.desy.de">
-<img class="imgframe" alt="FAI user" src="pics/desy.png" ></a>
-<a href="http://www.edf.fr">
-<img class="imgframe" alt="FAI user" src="pics/edf.png" ></a>
-<a href="https://taz.de">
-<img class="imgframe" alt="FAI user" src="pics/taz.png" ></a>
-<a href="https://wwwcip.informatik.uni-erlangen.de">
-<img class="imgframe" alt="FAI user" src="pics/fau.png" ></a>
-<a href="https://hpi.de">
-<img class="imgframe" alt="FAI user" src="pics/hpi.png" ></a>
-<a href="https://archive.org">
-<img class="imgframe" alt="FAI user" src="pics/archive.png" ></a>
-<img class="imgframe" alt="FAI user" src="pics/ip-exchange.png" >
-<img class="imgframe" alt="FAI user" src="pics/limux.png" >
-<a href="https://www.cewe.de">
-<img class="imgframe" alt="FAI user" src="pics/cewe.png" ></a>
-<a href="http://narrowxpres.nl">
-<img class="imgframe" alt="FAI user" src="pics/narrowxpress.png" ></a>
-<a href="https://www.stayfriends.de">
-<img class="imgframe" alt="FAI user" src="pics/stayfriends.png" ></a>
-<a href="https://www.spotify.com">
-<img class="imgframe" alt="FAI user" src="pics/spotify.png" ></a>
-<a href="https://www.switch.ch">
-<img class="imgframe" alt="FAI user" src="pics/switch.png" ></a>
-<a href="https://www.rbg.informatik.tu-darmstadt.de/">
-<img class="imgframe" alt="FAI user" src="pics/tu-darmstadt.png" ></a>
-<a href="http://www.sanger.ac.uk">
-<img class="imgframe" alt="FAI user" src="pics/sanger.png" ></a>
-<a href="https://www.mobile.de">
-<img class="imgframe" alt="FAI user" src="pics/mobile.png" ></a>
-<a href="https://archive.org">
-<img class="imgframe" alt="FAI user" src="pics/wayback.png" ></a>
-<a href="http://www.systems.ethz.ch">
-<img class="imgframe" alt="FAI user" src="pics/eth.png" ></a>
-<a href="https://www.munichx.de">
-<img class="imgframe" alt="FAI user" src="pics/munichx.png" ></a>
-<a href="https://catalyst.net.nz/">
-<img class="imgframe" alt="FAI user" src="pics/catalyst.png" ></a>
-<a href="https://www.mathworks.com">
-<img class="imgframe" alt="FAI user" src="pics/mathworks.png" ></a>
-<a href="https://netways.de">
-<img class="imgframe" alt="FAI user" src="pics/netways.png" ></a>
-<a href="https://www.uni-marburg.de/hrz">
-<img class="imgframe" alt="FAI user" src="pics/marburg.png" ></a>
-<a href="http://openqrm-enterprise.com">
-<img class="imgframe" alt="FAI user" src="pics/openqrm.png" ></a>
-<a href="https://www.opera.com">
-<img class="imgframe" alt="FAI user" src="pics/opera.png" ></a>
-<a href="https://www.hosteurope.de">
-<img class="imgframe" alt="FAI user" src="pics/hosteurope.png" ></a>
-<a href="https://www.ida.liu.se">
-<img class="imgframe" alt="FAI user" src="pics/linkopings.png" ></a>
-<a href="https://www.lvm.de">
-<img class="imgframe" alt="FAI user" src="pics/lvm.png" ></a>
-<a href="http://informatik.uni-koeln.de/">
-<img class="imgframe" alt="FAI user" src="pics/koeln.png" ></a>
-<a href="https://www.opensides.be">
-<img class="imgframe" alt="FAI user" src="pics/opensides.png" ></a>
-<a href="https://www.gl-systemhaus.de">
-<img class="imgframe" alt="FAI user" src="pics/gundl.png" ></a>
-<a href="https://www.ska.ac.za">
-<img class="imgframe" alt="FAI user" src="pics/ska.png" ></a>
-<a href="https://iils.de">
-<img class="imgframe" alt="FAI user" src="pics/iils.png" ></a>
-<a href="https://fsf.org">
-<img class="imgframe" alt="FAI user" src="pics/fsf.png" ></a>
-<a href="https://www.chip.de">
-<img class="imgframe" alt="FAI user" src="pics/chip.png" ></a>
-<a href="https://www.ibr.cs.tu-bs.de">
-<img class="imgframe" alt="FAI user" src="pics/braunschweig.png" ></a>
-<a href="https://www.ismll.uni-hildesheim.de">
-<img class="imgframe" alt="FAI user" src="pics/hildesheim.png" ></a>
-<a href="http://nedap-healthcare.com">
-<img class="imgframe" alt="FAI user" src="pics/nedap.png" ></a>
-<a href="http://www.wolke.hs-furtwangen.de">
-<img class="imgframe" alt="FAI user" src="pics/hfu.png" ></a>
-<a href="https://www.linuxhotel.de">
-<img class="imgframe" alt="FAI user" src="pics/linuxhotel.png" ></a>
-<a href="https://alarm-dispatcher.de">
-<img class="imgframe" alt="FAI user" src="pics/alarm.png" ></a>
-<a href="https://www.dvz-mv.de">
-<img class="imgframe" alt="FAI user" src="pics/dvz.png" ></a>
-<a href="https://www.ise.fraunhofer.de">
-<img class="imgframe" alt="FAI user" src="pics/ise.png" ></a>
-<a href="https://lihas.de">
-<img class="imgframe" alt="FAI user" src="pics/lihas.png" ></a>
-<a href="http://www.info.univ-angers.fr/leria/">
-<img class="imgframe" alt="FAI user" src="pics/angers.png" ></a>
-<a href="https://das-netzwerkteam.de/">
-<img class="imgframe" alt="FAI user" src="pics/netzwerkteam.png" ></a>
-<a href="https://sagemcom.com/">
-<img class="imgframe" alt="FAI user" src="pics/sagemcom.png" ></a>
-
-</span>
-
-<p>
-There are <a href="/reports">more user references</a> with links to companies and organisations.
-
-      </div>
-    </div>
-  <div id="footer"></div>
-  </div>
+    </main>
+    <footer class="page-footer grey darken-3">
+      <!--#include virtual="/footer.html" -->
+    </footer>
+    <!--JavaScript at end of body for optimized loading-->
+    <script src="/js/materialize.js"></script>
+    <script>
+      M.AutoInit();
+    </script>
   </body>
 </html>
